debug : test for fix 502 bad gateway

--- a/public/team.html
+++ b/public/team.html
@@ -13,6 +13,9 @@
   </style>
 </head>
 <body>
+  <div style="margin-bottom: 16px;">
+    <button onclick="window.history.back()" style="padding: 8px 12px; border-radius: 10px; border: 1px solid #ccc; background: #fff; cursor: pointer;">← Back</button>
+  </div>
   <h2>Team Screen</h2>
   <div id="meta"></div>
 
