--- a/public/audience.html
+++ b/public/audience.html
@@ -12,6 +12,9 @@
   </style>
 </head>
 <body>
+  <div style="margin-bottom: 16px;">
+    <button onclick="window.history.back()" style="padding: 8px 12px; border-radius: 10px; border: 1px solid #ccc; background: #fff; cursor: pointer;">← Back</button>
+  </div>
   <h2>Audience Mode (Customer Jury)</h2>
   <div id="meta"></div>
 
