--- a/public/facilitator.html
+++ b/public/facilitator.html
@@ -3,111 +3,62 @@
   <head>
     <meta charset="utf-8" />
     <title>Facilitator Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      body {
-        font-family: system-ui;
-        margin: 16px;
-      }
-      .row {
-        display: flex;
-        gap: 16px;
-        align-items: flex-start;
-        flex-wrap: wrap;
-      }
-      .card {
-        border: 1px solid #ddd;
-        border-radius: 12px;
-        padding: 12px;
-        min-width: 260px;
-      }
-      h2,
-      h3 {
-        margin: 0 0 8px 0;
-      }
-      .big {
-        font-size: 20px;
-        font-weight: 700;
-      }
-      .pill {
-        display: inline-block;
-        padding: 4px 10px;
-        border-radius: 999px;
-        background: #f2f2f2;
-        margin-right: 6px;
-      }
-      table {
-        border-collapse: collapse;
-        width: 100%;
-      }
-      td,
-      th {
-        border: 1px solid #eee;
-        padding: 6px;
-        font-size: 14px;
-        vertical-align: top;
-      }
-      button {
-        padding: 8px 10px;
-        border-radius: 10px;
-        border: 1px solid #ccc;
-        background: #fff;
-        cursor: pointer;
-        margin: 4px 4px 0 0;
-      }
       .event {
         background: #fff7e6;
         border: 1px solid #ffd27d;
       }
     </style>
   </head>
-  <body>
-    <div class="big">Idea-to-Market: Create Your Blue Ocean — Facilitator</div>
+  <body class="font-sans m-4">
+    <div class="text-xl font-bold">Idea-to-Market: Create Your Blue Ocean — Facilitator</div>
     <div id="meta"></div>
 
-    <div class="row">
-      <div class="card">
-        <h3>Controls</h3>
+    <div class="flex gap-4 items-start flex-wrap">
+      <div class="border border-gray-300 rounded-xl p-3 min-w-[260px]">
+        <h3 class="m-0 mb-2">Controls</h3>
         <div>
-          <button onclick="setPhase('A')">Phase A</button>
-          <button onclick="setPhase('B')">Phase B</button>
-          <button onclick="setPhase('C')">Phase C</button>
-          <button onclick="setPhase('D')">Phase D</button>
-          <button onclick="setPhase('END')">END</button>
+          <button onclick="setPhase('A')" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">Phase A</button>
+          <button onclick="setPhase('B')" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">Phase B</button>
+          <button onclick="setPhase('C')" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">Phase C</button>
+          <button onclick="setPhase('D')" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">Phase D</button>
+          <button onclick="setPhase('END')" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">END</button>
         </div>
-        <div style="margin-top: 8px">
-          <button onclick="backRound()">➡️ Back Round</button>
-          <button onclick="draw('customer')">🎴 Random Customer/Pain</button>
-          <button onclick="draw('event')">⚡ Draw Event</button>
-          <button onclick="nextRound()">➡️ Next Round</button>
+        <div class="mt-2">
+          <button onclick="backRound()" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">➡️ Back Round</button>
+          <button onclick="draw('customer')" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">🎴 Random Customer/Pain</button>
+          <button onclick="draw('event')" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">⚡ Draw Event</button>
+          <button onclick="nextRound()" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">➡️ Next Round</button>
         </div>
       </div>
 
-      <div class="card event">
-        <h3>Event</h3>
+      <div class="border border-orange-300 rounded-xl p-3 min-w-[260px] bg-orange-50">
+        <h3 class="m-0 mb-2">Event</h3>
         <div id="eventText">—</div>
       </div>
 
-      <div class="card">
-        <h3>Quick Score Adjust</h3>
+      <div class="border border-gray-300 rounded-xl p-3 min-w-[260px]">
+        <h3 class="m-0 mb-2">Quick Score Adjust</h3>
         <div>
           Team ID
-          <input id="tid" type="number" min="1" max="12" style="width: 60px" />
-          ❤️ <input id="dv" type="number" value="0" style="width: 60px" /> ⚔️
-          <input id="dc" type="number" value="0" style="width: 60px" /> 💡
-          <input id="dd" type="number" value="0" style="width: 60px" />
-          <button onclick="adjust()">Apply</button>
+          <input id="tid" type="number" min="1" max="12" class="w-15 px-2.5 py-2.5 rounded-lg border border-gray-300 mt-1.5" />
+          ❤️ <input id="dv" type="number" value="0" class="w-15 px-2.5 py-2.5 rounded-lg border border-gray-300 mt-1.5" /> ⚔️
+          <input id="dc" type="number" value="0" class="w-15 px-2.5 py-2.5 rounded-lg border border-gray-300 mt-1.5" /> 💡
+          <input id="dd" type="number" value="0" class="w-15 px-2.5 py-2.5 rounded-lg border border-gray-300 mt-1.5" />
+          <button onclick="adjust()" class="px-2.5 py-2 rounded-lg border border-gray-300 bg-white cursor-pointer m-1">Apply</button>
         </div>
-        <small>ใช้ตอนให้โบนัส/หักคะแนนเร็ว ๆ</small>
+        <small class="text-xs text-gray-600">ใช้ตอนให้โบนัส/หักคะแนนเร็ว ๆ</small>
       </div>
     </div>
 
-    <div class="card" style="margin-top: 16px">
-      <h3>Scoreboard (Active Teams)</h3>
+    <div class="border border-gray-300 rounded-xl p-3 mt-4">
+      <h3 class="m-0 mb-2">Scoreboard (Active Teams)</h3>
       <div id="board"></div>
     </div>
 
-    <div class="card" style="margin-top: 16px">
-      <h3>Live Submissions (Active Teams)</h3>
+    <div class="border border-gray-300 rounded-xl p-3 mt-4">
+      <h3 class="m-0 mb-2">Live Submissions (Active Teams)</h3>
       <div id="subs"></div>
     </div>
 
@@ -119,10 +70,10 @@
       socket.on("state", (s) => {
         STATE = s;
         document.getElementById("meta").innerHTML =
-          `<span class="pill">GameCode: ${s.gameCode}</span>
-         <span class="pill">Round: ${s.currentRound}</span>
-         <span class="pill">Active: ${s.activeTeams.join(", ")}</span>
-         <span class="pill">Phase: ${s.phase}</span>`;
+          `<span class="inline-block px-2.5 py-1 rounded-full bg-gray-100 mr-1.5">GameCode: ${s.gameCode}</span>
+         <span class="inline-block px-2.5 py-1 rounded-full bg-gray-100 mr-1.5">Round: ${s.currentRound}</span>
+         <span class="inline-block px-2.5 py-1 rounded-full bg-gray-100 mr-1.5">Active: ${s.activeTeams.join(", ")}</span>
+         <span class="inline-block px-2.5 py-1 rounded-full bg-gray-100 mr-1.5">Phase: ${s.phase}</span>`;
         document.getElementById("eventText").textContent = s.eventText || "—";
         renderBoard();
         renderSubs();
@@ -164,8 +115,8 @@
       `,
           )
           .join("");
-        document.getElementById("board").innerHTML = `<table>
-          <tr><th>Team</th><th>Value</th><th>Competition</th><th>Differentiation</th></tr>
+        document.getElementById("board").innerHTML = `<table class="border-collapse w-full">
+          <tr><th class="border border-gray-200 px-1.5 py-1.5 text-sm align-top">Team</th><th class="border border-gray-200 px-1.5 py-1.5 text-sm align-top">Value</th><th class="border border-gray-200 px-1.5 py-1.5 text-sm align-top">Competition</th><th class="border border-gray-200 px-1.5 py-1.5 text-sm align-top">Differentiation</th></tr>
           ${rows}
         </table>`;
       }
@@ -176,7 +127,7 @@
           .filter((t) => active.has(t.id))
           .map(
             (t) => `
-        <div style="border:1px solid #eee;border-radius:12px;padding:10px;margin:8px 0">
+        <div style="border:1px solid #eee;border-radius:12px;padding:10px;margin:8px 0" class="border border-gray-200 rounded-xl p-2.5 my-2">
           <b>${t.name} (#${t.id})</b><br/>
           <div><b>Customer:</b> ${escapeHtml(t.customer)}</div>
           <div><b>Pain:</b> ${escapeHtml(t.pain)}</div>
